[project]
name = "01-dcx"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9.19"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "ipywidgets>=8.1.8",
    "lxml>=6.0.2",
    "notebook>=7.5.0",
    "pandas>=2.3.3",
    "selenium>=4.36.0",
    "tqdm>=4.67.1",
    "widgetsnbextension>=4.0.15",
]
